# ROS2_industrial

./: .buildinfo  README.md  genindex.html  index.html  licence.html  licence.md  objects.inv  search.html  searchindex.js  tmp  tmp.urdf
.doctrees/: environment.pickle  index.doctree  licence.doctree
.doctrees/1_basics/: actions.doctree  basics.doctree  creating_packages_for_python.doctree  launch_files.doctree  packages_and_nodes.doctree  parameters.doctree  services.doctree  topics.doctree
.doctrees/1_basics/ESP32/: README.doctree  ultrasonic_sensor.doctree
.doctrees/2_urdf/: urdf copy.doctree  urdf.doctree
.doctrees/3_navigation/: navigation.doctree
.doctrees/3_navigation/ESP32/: joystick.doctree
.doctrees/4_manipulation/: manipulation.doctree
.doctrees/5_transferframes/: transferframes.doctree
.doctrees/general/: general.doctree
.doctrees/references/: references.doctree
.doctrees/references/microros/: microros.doctree
.doctrees/test/: test.doctree
.github/workflows/: documentation.yml
1_basics/: README.md  actions.html  basics.html  creating_packages_for_python.html  launch_files.html  packages_and_nodes.html  parameters.html  services.html  topics.html
1_basics/ESP32/: README.html  README.md  ultrasonic_sensor.html
1_basics/ESP32/install/: start_micro_ros_agent.sh
1_basics/node_demo/: .gitignore  package.xml  setup.py
1_basics/range_sensor/: package.xml
1_basics/range_sensor_cpp/: package.xml
1_basics/range_sensors_interfaces/: CMakeLists.txt  package.xml
1_basics/template_interfaces/: package.xml
1_basics/template_package_cpp/: package.xml
1_basics/template_package_python/: package.xml
1_basics/workshops/: actions.md  packages_and_nodes.md  parameters.md  services.md  topics.md
2_urdf/: README.md  urdf copy.html  urdf.html
2_urdf/fanuc_robots/: package.xml  setup.cfg  setup.py
2_urdf/urdf_basics/: package.xml  setup.py
3_navigation/: README.md  navigation.html
3_navigation/ESP32/: README.md  joystick.html
3_navigation/navigation/: package.xml  setup.py
4_manipulation/: README.md  manipulation.html
4_manipulation/manipulation/: setup.py
4_manipulation/manipulation_environment/: package.xml
4_manipulation/manipulation_moveit_config/: .setup_assistant  package.xml
5_transferframes/: .gitignore  README.md  transferframes.html
5_transferframes/transferframes/: package.xml  setup.py
5_transferframes/transferframes_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
6_project/: README.md
_sources/: index.rst.txt
_sources/1_basics/: actions.md.txt  packages_and_nodes.md.txt  parameters.md.txt  topics.md.txt
_sources/2_urdf/: urdf.md.txt
_sources/5_transferframes/: transferframes.md.txt
_sources/general/: general.md.txt
documatation/: conf.py  index.rst  install.md  licence.md  requirements.txt
documatation/1_basics/: actions.md  basics.rst  creating_packages_for_python.md  launch_files.md  packages_and_nodes.md  parameters.md  services.md  topics.md
documatation/2_urdf/: urdf.md  urdf.rst  urdf_tst.rst  urdfxxxx.md
documatation/3_navigation/: navigation.rst
documatation/4_manipulation/: manipulation.md  manipulation.rst
documatation/5_transferframes/: transferframes.rst
documatation/basics/: README.md  actions.md  basics.rst
documatation/general/: general.md
documatation/test/: test.md
documentation/: .gitignore  conf.py  index.rst
documentation/1_basics/: actions.md  basics.rst  launch_files.md  parameters.md  services.md  topics.md
documentation/2_urdf/: urdf.md
documentation/3_navigation/: navigation.md
documentation/general/: general.md
documentation/images/: esp32-S3-mini.jpg:Zone.Identifier  esp32-c3-mini.jpg:Zone.Identifier  esp32-mini.jpg:Zone.Identifier  esp32-mini.png:Zone.Identifier  esp32-pinout.jpg:Zone.Identifier  esp32.jpg:Zone.Identifier
documentation/references/: references.rst
general/: general.html
install/: install.bash  install_colcon.sh  install_ros_humble_desktop.bash  package.xml  setup.py
microros/scripts/: start_micro_ros_agent.sh
references/: references.html
references/microros/: microros.html
ros_industrial/: CMakeLists.txt  package.xml
support/ros_industrial_actuators/: CMakeLists.txt  package.xml
support/ros_industrial_actuators/include/ros_industrial_actuators/: my_vacuum_gripper_plugin.hpp
support/ros_industrial_actuators/models/vacuum_gripper/: model.config  model.sdf
support/ros_industrial_actuators/ros_industrial_actuators/: __init__.py  custom_logical_camera.py  take_photo.py  vacuum_gripper.py
support/ros_industrial_actuators/src/: custom_vacuum_gripper_plugin.cpp  my_vacuum_gripper_plugin.cpp
support/ros_industrial_gazebo/: package.xml
support/ros_industrial_msgs/: CMakeLists.txt  package.xml
support/ros_industrial_sensors/: CMakeLists.txt  package.xml
support/ros_industrial_support/: package.xml
support/ros_industrial_utilities/: package.xml
test/: test.html
(+205 files in other folders)
