<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_industrial_install</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ga.harkema@avans.nl">Gerard Harkema</maintainer>
  <license>CC BY-NC-SA 4.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>moveit</depend>
  <depend>joint-state-publisher-gui</depend>
  <depend>combined-robot-hw</depend>
  <depend>moveit-servo</depend>
  <depend>moveit-visual-tools</depend>
  <depend>ros-controllers</depend>
  <depend>controller-manager</depend>
  <depend>controller-manager-msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
