<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_industrial_actuators</name>
  <version>0.1.0</version>
  <description>
    A ROS 2 package for simulating industrial sensors, including plugins for Gazebo and Python scripts for handling sensor data.
  </description>

  <maintainer email="ga.harkema@avans.nl">Gerard Harkema</maintainer>
  <license>CC BY-NC-SA 4.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
  <depend>ros_industrial_msgs</depend>
  <depend>rclpy</depend>

  <!-- Build dependencies -->
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rclcpp</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>cv_bridge</test_depend>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
